Corrects the vertical alignment of the Feedback button in `main-nav`

--- a/public/resources/css/module/_main-nav.scss
+++ b/public/resources/css/module/_main-nav.scss
@@ -10,6 +10,10 @@
     padding: 0px 0px 0px ($unit * 2);
   }
 
+  .feedback-button {
+    margin-top: 10px;
+  }
+
   h1 {
     margin: 0px ($unit * 10) 0px 0px;
     padding: 0px;
